# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.28.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fixes in zsh completion for --print and --*overlay*
	- -fstrict-enums -fno-rtti -fno-threadsafe-statics -fvect-cost-model

*eix-0.28.4
	Артём Воротников <vorot93 at yandex.ru>:
	- Russian translation fixes and updates

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Ethan Schoonover's Solarized has now its own color schemes in eix:
	  Set SOLARIZED if you use solarized (and omit setting TERM_ALT3 or
	  COLORSCHEME? as was recommended previously: this would choose a
	  standard scheme instead of the special adaption to solarized
	  system colors)
	- Use -fno-fat-lto-objects

*eix-0.28.3
	Артём Воротников <vorot93 at yandex.ru>:
	- Russian translation fixes and updates

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support secondary remote database:
	  Default: gentoo and zugaina (http://gpo.zugaina.org)
	  New option -Z, --remote2; modify REMOTE_DEFAULT correspondingly
	- Fix eix-update with REMOTE_DEFAULT, see
	  http://bugs.gentoo.org/show_bug.cgi?id=462040
	- Fixes in zsh-completion: content, tags, use always _description,
	  add some forgotten options like -R (and new -Z)
	- Make copy-constructors non-explicit as required in new C++ standard,
	  see http://bugs.gentoo.org/show_bug.cgi?id=456064
	- Pass Google's current cpplint-3.231
	- Be nice to gcc-4.8 (e.g. -Wno-long-long for broken pre-includes)
	- Use gettext-0.18.2
	- Compile also with <automake-1.13

*eix-0.28.2
	Артём Воротников <vorot93 at yandex.ru>:
	- Russian translation fixes and updates

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce -# as short form of --only-names, see
	  http://bugs.gentoo.org/show_bug.cgi?id=453180
	- Fix regression of re-enumeration of overlays from eix-0.28.0, see
	  http://bugs.gentoo.org/show_bug.cgi?id=452548
	- Allow full mask syntax in --pipe.
	- Introduce --pipe-mask.